# cellar

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  Makefile  PKGBUILD  README.md  SECURITY.md  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: release.yml
assets/: cellar.desktop
src/: app.rs  backend.rs  cli.rs  hash.rs  iso.rs  main.rs  manifest.rs
wix/: main.wxs
